--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "oidc-react": "^3.2.2",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.3.1",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
-    "sharp": "^0.33.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
