--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dompurify": "^3.1.6",
     "highlight.js": "^11.10.0",
     "keycloak-js": "^25.0.2",
+    "oidc-client-ts": "^3.0.1",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
