--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ibra1337.github.io/my-portfolio",
+  "homepage" : " https://ibra1337.github.io/my-portfolio" ,
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -24,11 +24,11 @@
   "scripts": {
 
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build" ,
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
